syntax = "proto2";

package com.hww.protobuf.code;
option java_package = "com.hww.serializationtechnology.protobuf.code";
option java_outer_classname = "SubscribeRespProto";

message SubscribeResp{
 required int32 subRespId = 1;
 required int32 respCode = 2;
 required string desc = 3;
}



